* use global lock for checking previous use on update
* general cleanup of setcore
* cleaned up setup file and added better descriptions
* fixed a bug that would cause fsattack to not load properly
* moved from pulling entire setcore which is a few thousand lines to adding src/core/set.version which contains the version - much faster in pulling down

~~~~~~~~~~~~~~~~
version 7.2.3
~~~~~~~~~~~~~~~~

* added better handling around powershell detection

~~~~~~~~~~~~~~~~
version 7.2.2
~~~~~~~~~~~~~~~~

* added fsociety banner to initial loading

~~~~~~~~~~~~~~~~
version 7.2.1
~~~~~~~~~~~~~~~~

* fix automatic update line replace bug

~~~~~~~~~~~~~~~~
version 7.2
~~~~~~~~~~~~~~~~

* fixed an issue on installer not copying SET directory properly (why was I moving a file and ... nevermind.)
* changed delay time for HTA attack vector from 3 seconds to 10 seconds to allow proper loading
* added wording when using gmail and application specific passwords
* rewrote ms08-067 instead of being the python exploit to use the metasploit default which is much more reliable
* re-introduced the SMS spoofing method (now option 10) - it has been optimized and reduced to only use SMSGang as a main provider. 
* added ability to add your own attachments via file format attacks instead of having to use the ones built in
* added ability to add your own attachments via mass mailer attack vector
* added new config option called wget_deep and incremented config to 7.2 - this will allow 1 deep download wgets
* added ability to select on deeper wgets through web cloner in the web attack vectors - this will allow you to clone the site and not just the index.html which might be better.. to enable this edit /etc/setoolkit/set.config and turn WGET_DEEP to on.